--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.App {
-  width: 100vw;
-  height: 100vh;
-  background-color: rebeccapurple;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
