--- a/src/styles/page-Battle.module.css
+++ b/src/styles/page-Battle.module.css
@@ -1,7 +1,3 @@
-:root {
-
-}
-
 .background_img {
   background-image: url('../assets/images/scenes/bg_arena.jpg');
   background-size: cover;
@@ -10,4 +6,63 @@
 
   height: 100vh;
   width: 100vw;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#battle_area {
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-content: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+#card_cont {
+  width: inherit;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  gap: 300px;
+  align-self: center;
+  justify-content: center;
+}
+
+#heart_cont {
+  width: inherit;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  gap: 300px;
+  justify-content: center;
+  /* background-color: red; */
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.card {
+  width: 360px;
+  height: 505px;  
+  background-color: rgba(0, 0, 0, 0.3);
+
+  /* width: 550px;
+  height: 770px; */
+}
+
+#card_one {
+
+}
+
+#card_two {
+
+}
+
+Healthbar {
+
 }
