--- a/src/styles/page-Leaderboards.module.css
+++ b/src/styles/page-Leaderboards.module.css
@@ -64,7 +64,14 @@
 }
 
 .rank_name {
-  width: 100%;
+  width: 90%;
+  text-align: center;
+  font-family: rankname;
+}
+
+.rank_win {
+  width: 50px;
+  color: yellow;
   text-align: center;
   font-family: rankname;
 }
