--- a/src/styles/comp-Healthbar.module.css
+++ b/src/styles/comp-Healthbar.module.css
@@ -4,6 +4,7 @@
 }
 
 .health_cont {
+  position: relative;
   width: 360px;
   height: 30px;
   background-color: white;
@@ -13,15 +14,16 @@
 
 #health_curr {
   position: absolute;
-  width: inherit;
+  display: flex;
+  width: 100px;
   height: inherit;
   background-color: green;
   border-radius: 15px;
 
   color: black;
   font-family: pixelated;
-  text-align: center;
   align-items: center;
+  justify-content: center;
 }
 
 #health_text {
