--- a/src/styles/page-Battle.module.css
+++ b/src/styles/page-Battle.module.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: header;
+  src: url(../assets/fonts/10_gremlins.ttf);
+}
+
 .background_img {
   background-image: url('../assets/images/scenes/bg_arena.jpg');
   background-size: cover;
@@ -15,6 +20,7 @@
 #round_text {
   font-size: 5em;
   text-align: center;
+  font-family: header;
 }
 
 #battle_area {
