--- a/src/styles/vfx-Styling.module.css
+++ b/src/styles/vfx-Styling.module.css
@@ -29,3 +29,19 @@
   width: 0;
   height: 0;
 }
+
+#SelfCareC1 {
+  position: absolute;
+  top: 300px;
+  left: 280px;
+  width: 0;
+  height: 0;
+}
+
+#SelfCareC2 {
+  position: absolute;
+  top: 300px;
+  left: 940px;
+  width: 0;
+  height: 0;
+}
