--- a/src/styles/vfx-Styling.module.css
+++ b/src/styles/vfx-Styling.module.css
@@ -61,3 +61,19 @@
   width: 0;
   height: 0;
 }
+
+#HardenC1 {
+  position: absolute;
+  top: 260px;
+  left: 290px;
+  width: 0;
+  height: 0;
+}
+
+#HardenC2 {
+  position: absolute;
+  top: 260px;
+  left: 950px;
+  width: 0;
+  height: 0;
+}
