--- a/src/styles/vfx-Styling.module.css
+++ b/src/styles/vfx-Styling.module.css
@@ -30,6 +30,22 @@
   height: 0;
 }
 
+#PunchC1 {
+  position: absolute;
+  top: 290px;
+  left: 950px;
+  width: 0;
+  height: 0;  
+}
+
+#PunchC2 {
+  position: absolute;
+  top: 300px;
+  left: 300px;
+  width: 0;
+  height: 0;  
+}
+
 #SelfCareC1 {
   position: absolute;
   top: 300px;
@@ -71,6 +87,22 @@
 }
 
 #HardenC2 {
+  position: absolute;
+  top: 260px;
+  left: 950px;
+  width: 0;
+  height: 0;
+}
+
+#ZuccC1 {
+  position: absolute;
+  top: 260px;
+  left: 290px;
+  width: 0;
+  height: 0;
+}
+
+#ZuccC2 {
   position: absolute;
   top: 260px;
   left: 950px;
