--- a/src/styles/vfx-Styling.module.css
+++ b/src/styles/vfx-Styling.module.css
@@ -62,6 +62,7 @@
   left: 280px;
   width: 0;
   height: 0;
+  opacity: 0.3;
 }
 
 #SelfCareC2 {
@@ -70,6 +71,7 @@
   left: 940px;
   width: 0;
   height: 0;
+  opacity: 0.3;
 }
 
 #DStrikeC1 {
@@ -110,6 +112,7 @@
   left: 290px;
   width: 0;
   height: 0;
+  opacity: 0.3;
 }
 
 #ZuccC2 {
@@ -118,6 +121,7 @@
   left: 950px;
   width: 0;
   height: 0;
+  opacity: 0.3;
 }
 
 #DiceC1 {
@@ -165,4 +169,59 @@
   width: 150px;
   height: 150px;
   z-index: 2;
+}
+
+.c1_top_text {
+  position: absolute;
+  font-family: subtitle;
+  font-size: 3em;
+  text-align: center;
+  color: red;
+  top: 125px;
+  left: 260px;
+  width: 350px;
+  height: auto;
+  z-index: 2;
+  /* background-color: red; */
+}
+
+.c2_top_text {
+  position: absolute;
+  font-family: subtitle;
+  font-size: 3em;
+  text-align: center;
+  color: red;
+  top: 125px;
+  left: 925px;
+  width: 350px;
+  height: fit-content;
+  z-index: 2;
+}
+
+.c1_side_text {
+  position: absolute;
+  font-family: subtitle;
+  font-size: 2em;
+  text-align: center;
+  color: white;
+  top: 250px;
+  left: 160px;
+  width: 100px;
+  height: fit-content;
+  z-index: 2;
+  /* background-color: red; */
+}
+
+.c2_side_text {
+  position: absolute;
+  font-family: subtitle;
+  font-size: 2em;
+  text-align: center;
+  color: white;
+  top: 250px;
+  left: 1280px;
+  width: 100px;
+  height: fit-content;
+  z-index: 2;
+  /* background-color: red; */
 }
