--- a/src/styles/vfx-Styling.module.css
+++ b/src/styles/vfx-Styling.module.css
@@ -225,3 +225,19 @@
   z-index: 2;
   /* background-color: red; */
 }
+
+#BonkAtkC1 {
+  position: absolute;
+  top: 120px;
+  left: 800px;
+  width: 300px;
+  height: 300px;
+}
+
+#BonkAtkC2 {
+  position: absolute;
+  top: 120px;
+  left: 400px;
+  width: 300px;
+  height: 300px;
+}
