scenes w/ musics done

--- a/src/styles/page-Battle.module.css
+++ b/src/styles/page-Battle.module.css
@@ -21,7 +21,7 @@
 }
 
 .background_img {
-  background-image: url('../assets/images/scenes/bg_arena.jpg');
+  background-color: black;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
