--- a/src/styles/vfx-Styling.module.css
+++ b/src/styles/vfx-Styling.module.css
@@ -199,6 +199,7 @@
 }
 
 .c1_side_text {
+  background: 'linear-gradient(to bottom, rgba(0, 0, 0, 0.8), transparent)';
   position: absolute;
   font-family: subtitle;
   font-size: 2em;
