--- a/src/styles/vfx-Styling.module.css
+++ b/src/styles/vfx-Styling.module.css
@@ -27,7 +27,7 @@
 #CritAtkC1 {
   position: absolute;
   top: 290px;
-  left: 950px;
+  right: 350px;
   width: 0;
   height: 0;
 }
@@ -205,8 +205,8 @@
   font-size: 2em;
   text-align: center;
   color: white;
-  top: 250px;
-  left: 160px;
+  bottom: 140px;
+  left: 200px;
   width: 100px;
   height: fit-content;
   z-index: 2;
@@ -219,8 +219,8 @@
   font-size: 2em;
   text-align: center;
   color: white;
-  top: 250px;
-  left: 1280px;
+  bottom: 140px;
+  right: 200px;
   width: 100px;
   height: fit-content;
   z-index: 2;
