--- a/src/styles/page-rivals.module.css
+++ b/src/styles/page-rivals.module.css
@@ -37,13 +37,14 @@
 }
 
 .loading_cont {
-  position: relative;
-  z-index: 1;
+  position: absolute;
+  z-index: 3;
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  top: 20px;
   margin-bottom: 2rem;
 }
 
@@ -108,12 +109,15 @@
 }
 
 .card_grid {
+  position: relative;
+  z-index: 2;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 20px;
   padding: 20px;
   max-width: 1400px;
   margin: 0 auto;
+  margin-top: 200px;
 }
 
 .card_item {
