--- a/src/styles/page-Loading.module.css
+++ b/src/styles/page-Loading.module.css
@@ -37,13 +37,15 @@
 }
 
 .loading_cont {
-  position: relative;
-  z-index: 1;
+  position: absolute;
+  z-index: 3;
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  top: 20px;
+  margin-bottom: 2rem;
 }
 
 #loading_text {
