--- a/src/styles/page-Loading.module.css
+++ b/src/styles/page-Loading.module.css
@@ -80,7 +80,7 @@
 
 .bottom_left {
   position: absolute;
-  bottom: 20px;
+  top: 20px;
   left: 20px;
   width: 150px;
   height: 150px;
@@ -91,13 +91,14 @@
   position: absolute;
   bottom: 20px;
   right: 20px;
+  margin:auto;
   z-index: 2;
 }
 
 .animated_text {
   font-family: rankname;
   color: white;
-  font-size: 48px;
+  font-size: 36px;
 }
 
 .proceedButton {
