--- a/src/styles/page-rivals.module.css
+++ b/src/styles/page-rivals.module.css
@@ -73,9 +73,15 @@
 }
 
 .loading_text {
+  position: absolute;
+  z-index: 3;
   width: 100%;
   text-align: center;
-  font-family: rankname;
+  color: #ffffff;
+  font-size: 50px;
+  padding: 40px;
+  font-family: header;
+  top: 150px;
 }
 
 .bottom_left {
@@ -117,7 +123,7 @@
   padding: 20px;
   max-width: 1400px;
   margin: 0 auto;
-  margin-top: 200px;
+  margin-top: 250px;
 }
 
 .card_item {
