--- a/src/styles/comp-Healthbar.module.css
+++ b/src/styles/comp-Healthbar.module.css
@@ -19,7 +19,7 @@
   height: inherit;
   background-color: green;
   border-radius: 15px;
-
+  transition: width 0.5s ease-out;
   color: black;
   font-family: pixelated;
   align-items: center;
